# featureduck

./: .cursorignore  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  example_feature_view.yaml  package-lock.json  poc_sqlframe.py  pyproject.toml  research_duckdb_spark_api.py  test_structured_logging.sh
benchmarks/: README.md
crates/featureduck-cli/: Cargo.toml
crates/featureduck-cli/src/: config.rs  lib.rs  main.rs  output.rs
crates/featureduck-cli/src/commands/: backfill.rs  delete.rs  list.rs  materialize.rs  mod.rs  register.rs  runs.rs  show.rs  sync.rs  validate.rs
crates/featureduck-core/: Cargo.toml
crates/featureduck-core/src/: aggregate_tree.rs  connector.rs  error.rs  hyperloglog.rs  incremental.rs  lib.rs  online_store.rs  resource_limits.rs  retry.rs  state.rs  storage.rs  time_window.rs  types.rs  validation.rs
crates/featureduck-core/src/storage/: local.rs  minio.rs
crates/featureduck-core/tests/: e2e_incremental.rs  e2e_validation.rs
crates/featureduck-delta/: Cargo.toml
crates/featureduck-delta/.featureduck/: duckdb.db
crates/featureduck-delta/benches/: delta_scan_comparison.rs  point_in_time_query.rs  simple_bench.rs
crates/featureduck-delta/src/: circuit_breaker.rs  connector.rs  lib.rs  observability.rs  pool.rs  write_optimized.rs
crates/featureduck-delta/tests/: crash_test.rs  delta_extension_test.rs  e2e_circuit_breaker.rs  e2e_compression.rs  e2e_real_world_scenario.rs  load_test.rs  stress_test.rs  stress_test_50gb.rs  stress_test_optimizations.rs  stress_to_failure.rs  test_dynamic_schema.rs  test_timestamp_ordering.rs
crates/featureduck-online/: Cargo.toml
crates/featureduck-online/src/: lib.rs  postgres_store.rs  redis_store.rs  sync.rs
crates/featureduck-online/tests/: e2e_online_store.rs
crates/featureduck-py/: Cargo.toml
crates/featureduck-py/src/: lib.rs
crates/featureduck-registry/: Cargo.toml
crates/featureduck-registry/src/: backend.rs  lib.rs  postgres_backend.rs  schema.rs  sqlite_backend.rs
crates/featureduck-registry/tests/: e2e_registry.rs  stress_test_registry.rs  test_stats.rs
crates/featureduck-server/: Cargo.toml
crates/featureduck-server/src/: api.rs  auth.rs  cli.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  request_id.rs  shutdown.rs  state.rs
crates/featureduck-server/src/api/: registry.rs  sync.rs
crates/featureduck-server/tests/: e2e_middleware.rs  e2e_registry_api.rs  e2e_rest_api.rs  load_test.rs  test_metrics.rs
deploy/airflow/: featureduck_dag.py
deploy/kubernetes/: cronjob.yaml
python/: test_pyo3_integration.py
python/examples/: comprehensive_sql_examples.py  e2e_full_pipeline.py  sqlframe_basic_example.py
python/featureduck/: __init__.py  feature_definition.py  sqlframe_view.py  validation.py
python/tests/: test_e2e_python_rust.py  test_sqlframe_integration.py  test_validation_api.py  test_validation_integration.py
research/: tecton_api_examples.md
tests/load/: online_serving.js
