[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "featureduck"
requires-python = ">=3.8,<3.14"
version = "0.1.0"
description = "Universal Feature Store with pluggable engines and storage"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "featureduck.featureduck_native"
python-source = "python"
