[package]
name = "featureduck-cli"
version = "0.1.0"
edition = "2021"
description = "FeatureDuck CLI - Feature store orchestration tool"
license = "Apache-2.0"

[lib]
name = "featureduck_cli"
path = "src/lib.rs"

[[bin]]
name = "featureduck"
path = "src/main.rs"

[dependencies]
# Internal crates
featureduck-core = { path = "../featureduck-core" }
featureduck-delta = { path = "../featureduck-delta" }
featureduck-registry = { path = "../featureduck-registry" }
featureduck-online = { path = "../featureduck-online", optional = true }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config file support
config = "0.14"

# Progress bars and terminal output
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"

[features]
default = []
# Enable online store sync support
online = ["featureduck-online"]
# Enable Redis online store
redis = ["online", "featureduck-online/redis"]
# Enable PostgreSQL online store
postgres = ["online", "featureduck-online/postgres"]
# Enable all online stores
online-all = ["redis", "postgres"]

[dev-dependencies]
tempfile = "3.10"
