[package]
name = "featureduck-online"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast online feature stores for FeatureDuck"
license = "Apache-2.0"

[features]
default = ["redis"]
redis = ["dep:redis"]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
all = ["redis", "postgres"]

[dependencies]
# Core dependency
featureduck-core = { path = "../featureduck-core" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Redis (optional) - using redis-rs with async
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

# PostgreSQL (optional) - using deadpool for pooling
deadpool-postgres = { version = "0.12", optional = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4.31", features = ["serde"] }

# DuckDB for Delta Lake sync
duckdb = { version = "1.1.1", features = ["bundled"] }

# URL parsing (for PostgreSQL connection string)
url = "2.5"

# UUID for staging table names
uuid = { version = "1.4", features = ["v4"] }

# Async streaming (for COPY)
futures = "0.3"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
