# FeatureDuck Server Binary
#
# This is the main HTTP server that exposes the feature serving API.
# It's built with Axum (modern Rust web framework) and uses DuckDB for queries.
#
# Key responsibilities:
# - HTTP API endpoints (online features, historical features)
# - Request validation and error handling
# - Connection pooling for DuckDB
# - Metrics and observability

[package]
name = "featureduck-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# This is a binary crate (produces an executable)
[[bin]]
name = "featureduck"
path = "src/main.rs"

# Library for integration tests
[lib]
name = "featureduck_server"
path = "src/lib.rs"

[dependencies]
# Internal dependencies
featureduck-core = { path = "../featureduck-core" }
featureduck-registry = { path = "../featureduck-registry" }
featureduck-delta = { path = "../featureduck-delta" }
featureduck-online = { path = "../featureduck-online", optional = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
duckdb = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Time
chrono = { workspace = true }

# Configuration parsing
serde_yaml = "0.9"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Authentication & Rate Limiting (P0)
governor = "0.6"
http = "1.0"

# Request tracing (unique request IDs)
uuid = { version = "1.4", features = ["v4"] }

[features]
default = []
# Enable online store support (Redis/PostgreSQL for low-latency serving)
online = ["featureduck-online"]
# Enable Redis online store
redis = ["online", "featureduck-online/redis"]
# Enable PostgreSQL online store
postgres = ["online", "featureduck-online/postgres"]
# Enable all online stores
online-all = ["redis", "postgres"]

[dev-dependencies]
# Testing
tempfile = { workspace = true }
